k8s/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-deployment
  labels:
    app: task-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: task-deployment
  template:
    metadata:
      labels:
        app: task-deployment
    spec:
      containers:
      - name: task-container
        image: samidha7/task-manager-app:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
