k8s/mysql-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  labels:
    app: mysql

spec:
  replicas: 1

  selector:
    matchLabels:
      app: mysql

  template:
    metadata:
      labels:
        app: mysql

    spec:
      containers:
      - name: mysql
        image: mysql:8
        volumeMounts:
          - name: mysql-storage
            mountPath: /var/lib/mysql

        ports:
        - containerPort: 3306

      volumes:  
        - name: mysql-storage
          persistentVolumeClaim: 
            claimName: mysql-pvc
