k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-task-manager
spec:
  ingressClassName: nginx
  rules:
  - host: app.samidhawani.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: task-service
            port:
              number: 80
